add open collab

--- a/_data/data.yaml
+++ b/_data/data.yaml
@@ -143,3 +143,11 @@ favorite_things:
     category: Science
   - text: "I love a good closed circle mystery or chamber drama that takes place in a single location. My favorites are <em>Rear Window</em>, <em>12 Angry Men</em>, <em>Clue</em>, <em>Coherence</em>, <em>The One I Love</em>, <em>Bad Times At The El Royale</em>, <em>Knives Out</em>, and any of Agatha Christie's Poirot whodunits."
     category: Movies & TV
+  - text: "To me, finding some viable path to [[https://www.newyorker.com/magazine/2020/02/10/can-we-have-prosperity-without-growth[+]“green growth”]] is a central challenge for our time and this might be one of our best [[https://www.vox.com/podcasts/2020/5/26/21269556/robert-frank-under-the-influence-ezra-klein-show-coronavirus[+]proposed solutions]]."
+    category: Culture
+  - text: "This [[https://www.perell.com/blog/50-ideas-that-changed-my-life[+]list of helpful concepts]] for making sense of the world."
+    category: Culture
+  - text: "Pretty dope online design tool called [[http://www.open-collab.org/[+]Open Collab]] where in anyone can upload work and it will be [[https://www.itsnicethat.com/articles/patrick-thomas-jonathan-auch-open-collab-graphic-design-digital-design-indaba-280520[+]randomly paired with someone else’s]] to create an overprinted combination piece. I love the kind of layered graphic serrendipity the tool generates."
+    category: Art & Illustration
+
+    
