--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ sass:
   sass_dir: _scss
 
 include:
-  - vendor
+  - assets/js/vendor
 
 # Exclude from processing.
 # The following items will not be processed, by default.
