--- a/_data/data.yaml
+++ b/_data/data.yaml
@@ -153,7 +153,7 @@ favorite_things:
     category: Movies & TV
   - text: "Monty Python’s [[https://www.youtube.com/watch?v=LfduUFF_i1A[+]Philosophy Football]]. Carl Marx warming up."
     category: Tomfoolery
-  - text: "<em>The Colbert Show</em> finale featured [[https://www.youtube.com/watch?v=rEq3TCxbvJs[+]this heartwarming rendition of Vera Lynn’s <em>We'll Meet Again</em>]]. Just a beautiful gathering of so many people, celebrating their common humanity and the joy of singing with others."
+  - text: "<em>The Colbert Shsow</em> finale featured [[https://www.youtube.com/watch?v=rEq3TCxbvJs[+]this heartwarming rendition of Vera Lynn’s <em>We'll Meet Again</em>]]. Just a beautiful gathering of so many people, celebrating their common humanity and the joy of singing with others."
     category: Movies & TV
   - text: "Sean Carroll’s series [[https://www.youtube.com/watch?v=HI09kat_GeI&list=PLrxfgDEc2NxZJcWcrxH3jyjUUrJlnoyzX[+]<em>The Biggest Ideas in the Universe</em>]]."
     category: Science
@@ -165,5 +165,5 @@ favorite_things:
     category: Math
   - text: "The game of [[http://www.papg.com/show?1TMQ[+]Sprouts]] (invented by John Conway and Michael Paterson Cambridge University in the early 1960s) has [[https://www.youtube.com/watch?v=XKsTGdN-4_M[+]a lot going on]], including its own [[https://www.youtube.com/watch?v=OAss481FfAQ[+]Brussels Sprouts]]."
     category: Math
-  - text: "The evocative and powerful poem about World War I, [[https://www.poetryfoundation.org/poems/46560/dulce-et-decorum-est[+]<em>Dulce et Decorum Est</em>]] by Wilfred Owen. (“Dulce et decorum est pro patria mori” is from the <em>Odes</em>, a collection of lyric poems by Horace. Translated from the Latin: “It is sweet and fitting to die for the homeland.”) Owen was killed in action exactly one week before the signing of the Armistice which ended the war."
+  - text: "Two powerful poems about war: [[https://www.poetryfoundation.org/poems/44329/the-man-he-killed[+]The Man He Killed]] by Thomas Hardy and [[https://www.poetryfoundation.org/poems/46560/dulce-et-decorum-est[+]<em>Dulce et Decorum Est</em>]] by Wilfred Owen. The latter, about World War I, refers to “Dulce et decorum est pro patria mori,” a line from the <em>Odes</em>, a collection of lyric poems by Horace. Translated from Latin, it means “It is sweet and fitting to die for the homeland.”) Owen was killed in action exactly one week before the signing of the Armistice which ended the war. And to go with those poems, two stirring war protest songs: [[https://www.youtube.com/watch?v=h4-w2FYIJbw[+]Bring ’em Home]] by Pete Seeger and [[https://open.spotify.com/track/0snyjt8NMg7Dc7E3xnDH9b?si=9p5A3iKJSTuw3a-uC9gPmQ[+]What is Truth]] by Johnny Cash."
     category: Culture
