--- a/_data/data.yaml
+++ b/_data/data.yaml
@@ -173,3 +173,5 @@ favorite_things:
     category: Culture
   - text: "An [[https://www.ted.com/talks/steven_pinker_and_rebecca_newberger_goldstein_the_long_reach_of_reason[+]animated historial runthrough]] of the power of reason"
     category: Culture
+  - text: "Two of my favorite ads: Budweiser’s [[https://www.youtube.com/watch?v=9KFmpTt_I1k[+]<em>Born The Hard Way</em>]] and Kruger’s [[https://vimeo.com/449763565[+]<em>Unapologetically Human</em>]]."
+    category: Movies & TV
