--- a/_data/data.yaml
+++ b/_data/data.yaml
@@ -175,3 +175,5 @@ favorite_things:
     category: Culture
   - text: "Two of my favorite ads: Budweiser’s [[https://www.youtube.com/watch?v=ExTeQO8PwMw[+]<em>Born the Hard Way</em>]] and Kruger’s [[https://vimeo.com/449763565[+]<em>Unapologetically Human</em>]]."
     category: Movies & TV
+  - text: "A pairing: a prefatory consideration of [[https://ralphammer.com/make-me-think/[+]how UX can be more thoughtful about complexity]] and [[https://twitter.com/UFWupdates/status/1330656996807245824[+]a thread empowering people to understand an oversimplified mental model of food systems]]."
+    category: Design
