phase 1 of 3 updates

--- a/_data/data.yaml
+++ b/_data/data.yaml
@@ -175,7 +175,7 @@ favorite_things:
     category: Culture
   - text: "An [[https://www.ted.com/talks/steven_pinker_and_rebecca_newberger_goldstein_the_long_reach_of_reason[+]animated historial runthrough]] of the power of reason."
     category: Psychology
-  - text: "Three of my favorite ads: Budweiser’s [[https://www.youtube.com/watch?v=ExTeQO8PwMw[+]<em>Born the Hard Way</em>]]. Kruger’s [[https://vimeo.com/449763565[+]<em>Unapologetically Human</em>]], and AirBnb's [[https://www.youtube.com/watch?v=BrgvxO1tFOc[+]<em>Made possible by Hosts</em>]]."
+  - text: "Four of my favorite ads: Budweiser’s [[https://www.youtube.com/watch?v=ExTeQO8PwMw[+]<em>Born the Hard Way</em>]], Kruger’s [[https://vimeo.com/449763565[+]<em>Unapologetically Human</em>]], Guinness’ [[https://vimeo.com/551610690[+]<em>Welcome Back</em>]], and AirBnb’s [[https://www.youtube.com/watch?v=BrgvxO1tFOc[+]<em>Made possible by Hosts</em>]]."
     category: Movies & TV
   - text: "A pairing: a prefatory consideration of [[https://ralphammer.com/make-me-think/[+]how UX can be more thoughtful about complexity]] and [[https://twitter.com/UFWupdates/status/1330656996807245824[+]a thread empowering people to understand an oversimplified mental model of food systems]]."
     category: Design
@@ -195,3 +195,9 @@ favorite_things:
     category: Art & Illustration
   - text: "The time my listener chatter was featured on the [[https://slate.com/podcasts/political-gabfest/2021/07/teen-vax-access[+]Slate Political Gabfest]]. The subject: a [[https://www.newyorker.com/magazine/2021/02/08/how-a-young-activist-is-helping-pope-francis-battle-climate-change[+]New Yorker article]] and [[https://player.fm/series/solvable/mapping-catholic-lands-can-help-solve-biodiversity-loss-and-climate-change[+]Solvable podcast episode]] about [[https://mobile.twitter.com/MollyBurhans[+]Molly Burhans]], a cartographer, environmental activist, and founder of [[https://good-lands.org/[+]GoodLands]], using geospatial data analysis to move the Catholic Church on climate action through better land management. Check out [[https://www.youtube.com/watch?v=GtubyDPgLpE[+]this video]] for a quick intro."
     category: Social Impact
+  - text: "The time my listener chatter was featured on the [[https://slate.com/podcasts/political-gabfest/2021/07/teen-vax-access[+]Slate Political Gabfest]]. The subject: a [[https://www.newyorker.com/magazine/2021/02/08/how-a-young-activist-is-helping-pope-francis-battle-climate-change[+]New Yorker article]] and [[https://player.fm/series/solvable/mapping-catholic-lands-can-help-solve-biodiversity-loss-and-climate-change[+]Solvable podcast episode]] about [[https://mobile.twitter.com/MollyBurhans[+]Molly Burhans]], a cartographer, environmental activist, and founder of [[https://good-lands.org/[+]GoodLands]], using geospatial data analysis to move the Catholic Church on climate action through better land management. Check out [[https://www.youtube.com/watch?v=GtubyDPgLpE[+]this video]] for a quick intro."
+    category: Social Impact
+  - text: "[[https://math.stackexchange.com/questions/733754/visually-stunning-math-concepts-which-are-easy-to-explain[+]Visualizing mathematical concepts]]."
+    category: Math
+  - text: "Both [[https://www.youtube.com/watch?v=XPiSB8fSviE[+]<em>Goodfellas</em>]] and [[https://www.youtube.com/watch?v=xFrecN_dsPc[+]<em>Adventures in Babysitting</em>]] have iconic extended scenes set to “Then He Kissed Me by The Crystals.”"
+    category: Movies & TV
