--- a/_data/data.yaml
+++ b/_data/data.yaml
@@ -201,3 +201,5 @@ favorite_things:
     category: Math
   - text: "Both [[https://www.youtube.com/watch?v=XPiSB8fSviE[+]<em>Goodfellas</em>]] and [[https://www.youtube.com/watch?v=xFrecN_dsPc[+]<em>Adventures in Babysitting</em>]] have iconic extended scenes set to “Then He Kissed Me by The Crystals.”"
     category: Movies & TV
+  - text: "Harvard professor Steven Pinker’s’ [[https://sites.google.com/view/pinkers-psych-lectures/[+]Intro to Psychological Science lectures]], free and open to the public. Our brains are amazing."
+    category: Psychology
