work page content updates

--- a/_data/data.yaml
+++ b/_data/data.yaml
@@ -211,3 +211,5 @@ favorite_things:
     category: History
   - text: "The time, [[https://www.crowdcast.io/e/how-does-american/[+]at 1:50:40]], I got to pitch my theory of throughline questions to Agnes Callard and Ezra Klein. I am such a fan of both, this was truly thrilling."
     category: Philosophy
+  - text: 'The comedic chemistry between Rita Moreno and Animal in [[https://www.youtube.com/watch?v=b_IpgKzy75E[+]this rendition of Fever]] is just flawless. And [[https://www.newyorker.com/culture/culture-desk/i-cant-stop-laughing-rita-moreno-remembers-singing-with-animal[+]the story behind it]] is heartwarming. I love to imagine Ms. Moreno recognizing Jim Henson in a coffee shop in New York. “He hardly said a word, because I never shut up.”'
+    category: Tomfoolery
