update about text, remove bannerOffsets

--- a/_data/data.yaml
+++ b/_data/data.yaml
@@ -195,8 +195,6 @@ favorite_things:
     category: Art & Illustration
   - text: "The time my listener chatter was featured on the [[https://slate.com/podcasts/political-gabfest/2021/07/teen-vax-access[+]Slate Political Gabfest]]. The subject: a [[https://www.newyorker.com/magazine/2021/02/08/how-a-young-activist-is-helping-pope-francis-battle-climate-change[+]New Yorker article]] and [[https://player.fm/series/solvable/mapping-catholic-lands-can-help-solve-biodiversity-loss-and-climate-change[+]Solvable podcast episode]] about [[https://mobile.twitter.com/MollyBurhans[+]Molly Burhans]], a cartographer, environmental activist, and founder of [[https://good-lands.org/[+]GoodLands]], using geospatial data analysis to move the Catholic Church on climate action through better land management. Check out [[https://www.youtube.com/watch?v=GtubyDPgLpE[+]this video]] for a quick intro."
     category: Social Impact
-  - text: "The time my listener chatter was featured on the [[https://slate.com/podcasts/political-gabfest/2021/07/teen-vax-access[+]Slate Political Gabfest]]. The subject: a [[https://www.newyorker.com/magazine/2021/02/08/how-a-young-activist-is-helping-pope-francis-battle-climate-change[+]New Yorker article]] and [[https://player.fm/series/solvable/mapping-catholic-lands-can-help-solve-biodiversity-loss-and-climate-change[+]Solvable podcast episode]] about [[https://mobile.twitter.com/MollyBurhans[+]Molly Burhans]], a cartographer, environmental activist, and founder of [[https://good-lands.org/[+]GoodLands]], using geospatial data analysis to move the Catholic Church on climate action through better land management. Check out [[https://www.youtube.com/watch?v=GtubyDPgLpE[+]this video]] for a quick intro."
-    category: Social Impact
   - text: "[[https://math.stackexchange.com/questions/733754/visually-stunning-math-concepts-which-are-easy-to-explain[+]Visualizing mathematical concepts]]."
     category: Math
   - text: "Both [[https://www.youtube.com/watch?v=XPiSB8fSviE[+]<em>Goodfellas</em>]] and [[https://www.youtube.com/watch?v=xFrecN_dsPc[+]<em>Adventures in Babysitting</em>]] have iconic extended scenes set to “Then He Kissed Me by The Crystals.”"
@@ -207,9 +205,15 @@ favorite_things:
     category: Science
   - text: "When W.E.B. DuBois died in 1963 at the age of 95, a telegram was released which was his [[https://www.journals.uchicago.edu/doi/10.2307/2716212[+]final message to the world]], a poignant sentiment and call to all of us. In discovering that document, I also stumbled upon [[https://lettersofnote.com/2012/11/26/kiss-my-ass/[+]this gem]] from Bill Baxley, the Attorney General of Alabama, responding to the KKK in 1976."
     category: History
-  - text: "David W. Blight’s thoroughly engaging and enjoyable [[https://oyc.yale.edu/history/hist-119[+]lectures on The Civil War and Reconstruction Era, 1845–1877]] from Open Yale Courses."
+  - text: "David W. Blight’s thoroughly engaging and enjoyable [[https://oyc.yale.edu/history/hist-119[+]lectures on The Civil War and Reconstruction Era, 1845–1877]] from Open Yale Courses. This series contains so many useful historical concepts and insights including a powerful illustration of how stress causes poor decision making: throughout the Civil War, they would routinely find dead soldiers who had fallen in battle having loaded their rifle 3 or 4 times without ever firing it."
     category: History
   - text: "The time, [[https://www.crowdcast.io/e/how-does-american/[+]at 1:50:40]], I got to pitch my theory of throughline questions to Agnes Callard and Ezra Klein. I am such a fan of both, this was truly thrilling."
     category: Philosophy
   - text: 'The comedic chemistry between Rita Moreno and Animal in [[https://www.youtube.com/watch?v=b_IpgKzy75E[+]this rendition of Fever]] is just flawless. And [[https://www.newyorker.com/culture/culture-desk/i-cant-stop-laughing-rita-moreno-remembers-singing-with-animal[+]the story behind it]] is heartwarming. I love to imagine Ms. Moreno recognizing Jim Henson in a coffee shop in New York. “He hardly said a word, because I never shut up.”'
     category: Tomfoolery
+  - text: "Here are a few of my favorite organizations to volunteer with: [[https://www.dare2bnyc.org[+]Dare2B]], [[https://www.cpnyc.org[+]Children of Promise]], [[https://renewableheatnow.org[+]Renewable Heat Now]], [[https://www.saneenergy.org[+]Sane Energy Project]], [[https://www.instagram.com/club_a_nyc[+]Club A at Bushwick City Farm]], and [[https://cleanbushwickinitiative.org[+]Clean Bushwick Initiative]]."
+    category: Social Impact
+  - text: "My personal philosophy, as best I can tell, is an amalgamation of stoicism, existentialism, skepticism, pragmatism, deontology, rule consequentialism, virtue ethics, effective altruism, incremental idealism, and Bayesian neatnikism. So everything plus one I made up."
+    category: Philosophy
+  - text: "I like the concept of [[https://www.reducetarian.org[+]reducetarianism]]."
+    category: Social Impact
