update Pinker link

--- a/_data/data.yaml
+++ b/_data/data.yaml
@@ -199,7 +199,7 @@ favorite_things:
     category: Math
   - text: "Both [[https://www.youtube.com/watch?v=XPiSB8fSviE[+]<em>Goodfellas</em>]] and [[https://www.youtube.com/watch?v=xFrecN_dsPc[+]<em>Adventures in Babysitting</em>]] have iconic extended scenes set to “Then He Kissed Me by The Crystals.”"
     category: Movies & TV
-  - text: "Harvard professor Steven Pinker’s [[https://sites.google.com/view/pinkers-psych-lectures/[+]Intro to Psychological Science lectures]], free and open to the public. Our brains are amazing."
+  - text: "Harvard professor Steven Pinker’s [[https://stevenpinker.com/psy-1-introduction-psychological-science-lectures[+]Intro to Psychological Science lectures]], free and open to the public. Our brains are amazing."
     category: Psychology
   - text: "Cliff Stoll is so much fun. A brilliant scientist, mathematician, and curious all around fellow, he was featured in a 1990 NOVA broadcast called [[https://www.youtube.com/watch?v=4gHNVNRQTJg[+]“The KGB, the Computer and Me.”]] I love it not only because it’s a remarkable story and one of the first examples of digital forensics but because it’s told in such a refreshingly earnest manner, through adorably amateur reenactments portrayed by the actual people involved. Stoll has maintained his enthusiasm over the years and the way he begins [[https://www.youtube.com/watch?v=AAsICMPwGPY[+]this introduction to klein bottles]] just brings me joy. To be that sincerely passionate about anything is a rare and commendable thing indeed."
     category: Science
