add humane by design

--- a/_data/data.yaml
+++ b/_data/data.yaml
@@ -221,3 +221,5 @@ favorite_things:
     category: Coding
   - text: "One of my favorite songs, opera or otherwise, is “Largo Al Factotum Della Città” from <em>Il Barbiere Di Siviglia (The Barber of Seville)</em> composed in 1815 by Gioachino Rossini. I’m particularly fond of [[https://open.spotify.com/track/7FoAZxxMcTKP2Vu8pbso6C?si=cd26c703c1fc4c24[+]this version]], sung by Leo Nucci as Figaro in 1982 (the year I was born!) at La Scala in Milan. And of course, it’s also one of my favorite Looney Tunes, [[https://play.hbomax.com/page/urn:hbo:page:GXo0D1QcL4rDCYwEAABSf:type:episode[+]“Rabbit of Seville”]]."
     category: Music
+  - text: "[[https://humanebydesign.com/[+]Humane by Design]] is a resource that provides guidance for designing ethically humane digital products through patterns focused on user well-being, by [[https://jonyablonski.com/[+]Jon Yablonski]]."
+    category: Design
