update personal philosophy

--- a/_data/data.yaml
+++ b/_data/data.yaml
@@ -213,7 +213,7 @@ favorite_things:
     category: Tomfoolery
   - text: "Here are a few of my favorite organizations to volunteer with: [[https://www.dare2bnyc.org[+]Dare2B]], [[https://www.cpnyc.org[+]Children of Promise]], [[https://renewableheatnow.org[+]Renewable Heat Now]], [[https://www.saneenergy.org[+]Sane Energy Project]], [[https://www.instagram.com/club_a_nyc[+]Club A at Bushwick City Farm]], and [[https://cleanbushwickinitiative.org[+]Clean Bushwick Initiative]]."
     category: Social Impact
-  - text: "My personal philosophy, as best I can tell, is an amalgamation of stoicism, existentialism, skepticism, pragmatism, deontology, rule consequentialism, virtue ethics, effective altruism, incremental idealism, and Bayesian neatnikism. So everything plus one I made up."
+  - text: "My personal philosophy, as best I can tell, is an amalgamation of Stoicism, Epicureanism, Existentialism, Skepticism, Pragmatism, Zen Buddhism, Deontology, Rule Consequentialism, Virtue Ethics, effective altruism, incremental idealism, and Bayesian neatnikism. So everything plus one I made up."
     category: Philosophy
   - text: "I like the concept of [[https://www.reducetarian.org[+]reducetarianism]]."
     category: Social Impact
