add doughnut economics

--- a/_data/data.yaml
+++ b/_data/data.yaml
@@ -145,7 +145,7 @@ favorite_things:
     category: Science
   - text: "I love a good closed circle mystery or chamber drama that takes place in a single location. My favorites are <em>Rear Window</em>, <em>12 Angry Men</em>, <em>Clue</em>, <em>Coherence</em>, <em>The One I Love</em>, <em>Bad Times At The El Royale</em>, <em>Knives Out</em>, and any of Agatha Christie’s Poirot whodunits."
     category: Movies & TV
-  - text: "To me, finding some viable path to [[https://www.newyorker.com/magazine/2020/02/10/can-we-have-prosperity-without-growth[+]“green growth”]] is a central challenge for our time; how to make a high standard of living ecologically sustainable. And this might be one of our best [[https://www.vox.com/podcasts/2020/5/26/21269556/robert-frank-under-the-influence-ezra-klein-show-coronavirus[+]proposed solutions]]."
+  - text: "To me, finding some viable path to [[https://www.newyorker.com/magazine/2020/02/10/can-we-have-prosperity-without-growth[+]“green growth”]] is a central challenge for our time; how to make a high standard of living universal and ecologically sustainable. One of the most promising models for accomplishing this seems to be [[https://freakonomics.com/podcast/is-economic-growth-the-wrong-goal-update/[+]“Doughnut Economics”]] devised by Kate Raworth. She advocates for regenerative and distributive by design. Coupling that with a [[https://www.vox.com/podcasts/2020/5/26/21269556/robert-frank-under-the-influence-ezra-klein-show-coronavirus[+]well-calibrated tax system]], I think, would be a beautiful thing."
     category: Social Impact
   - text: "This [[https://www.perell.com/blog/50-ideas-that-changed-my-life[+]list of helpful concepts]] for making sense of the world."
     category: Writing & Lists
